[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bullets/clean-scan-ring.png" type="Texture" id=1]
[ext_resource path="res://entities/bullets/scan_fire.gd" type="Script" id=2]
[ext_resource path="res://assets/bullets/scan_pulse.png" type="Texture" id=3]

[sub_resource type="CylinderShape" id=1]
height = 0.670651

[sub_resource type="CylinderShape" id=2]
radius = 0.293284
height = 0.0504077

[node name="scan_bullet" type="KinematicBody" groups=[
"bullet",
]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.12, 0, 0, 0, -5.24537e-09, -0.12, 0, 0.12, -5.24537e-09, 0, 0, 0 )
shape = SubResource( 1 )

[node name="scan_ring" type="Sprite3D" parent="."]
modulate = Color( 1, 0, 0.2, 1 )
texture = ExtResource( 1 )

[node name="scan_pulse" type="Sprite3D" parent="."]
texture = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
